--- a/week 2/style.css
+++ b/week 2/style.css
@@ -4,11 +4,12 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     color: #505050;
+    background: linear-gradient(45deg, #1ebf9c, rgb(222, 191, 12));
 }
 
 /* Header Styles */
 header {
-    background-color: #282689;
+     background: linear-gradient(31deg, #ee609c 66%, #ee609c 100%);
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -100,8 +101,8 @@ main h3 {
 }
 
 .service-column {
-    flex-basis: calc(25% - 20px);
-    max-width: calc(25% - 20px);
+    flex-basis: calc(50% - 20px);
+    max-width: calc(50% - 20px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -109,7 +110,7 @@ main h3 {
 }
 
 .service-column img {
-    width: 180px;
+    width: 230px;
     height: auto;
     margin-bottom: 10px;
 }
@@ -137,21 +138,33 @@ main h3 {
 .cta-container {
     text-align: center;
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: #f1ba2e;
     margin-top: 30px;
+    border-style: solid;
+    border-width: 10px;
+    border-color: #dd0707;
 }
-
+.cta-container h2{
+    text-transform: uppercase;
+    font-size: 25px;
+}
+.cta-container p{
+    font-size: 15px;
+    font-weight: lighter;
+}
 .cta-button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #007BFF;
+    background-color: #0e673f;
     color: #ffffff;
     text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
     margin-top: 15px;
     transition: background-color 0.3s;
+    cursor: pointer;
 }
+
 
 .cta-button:hover {
     background-color: #0056b3;
