--- a/week 2/style.css
+++ b/week 2/style.css
@@ -84,7 +84,7 @@ main {
 .services {
     margin: 2rem auto;
     padding: 2rem;
-    background-color: #fff;
+    background-color: #98b2d1;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
