--- a/week 2/style.css
+++ b/week 2/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Young Serif', serif;
     color: #505050;
     background: linear-gradient(45deg, #1ebf9c, rgb(222, 191, 12));
 }
